test/Fail/Issue1720-1.err
Issue1720-1.agda:4.3-7.14: error: [NotValidBeforeField]
This declaration is illegal in a record before the last field
when scope checking the declaration
  record Foo A where
    a : A
    a = ?
      where
        a' : A
        a' = ?
    field f : A
